# Synthese-carte-financement

./: .gitignore  CLAUDE.md  README.md  config.py  database.py  main.py  pyproject.toml
generated_documents/: .~lock.Carte_Financement_DOSS-20251030_143503.docx#  Carte_Financement_DOSS-20251030_143503.docx
models/: __init__.py  schemas.py
services/: __init__.py  document_processor.py  llm_classifier.py  synthesis_generator.py  word_generator.py
